--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,34 @@
 {
     "routes": [
       {
+        "src": "/about_overview",
+        "dest": "/about_overview.html"
+      },
+      {
+        "src": "/about_leader",
+        "dest": "/about_leader.html"
+      },
+      {
+        "src": "/business_overview",
+        "dest": "/business_overview.html"
+      },
+      {
+        "src": "/business_petroleum",
+        "dest": "/business_petroleum.html"
+      },
+      {
+        "src": "/business_petrochemical",
+        "dest": "/business_petrochemical.html"
+      },
+      {
+        "src": "/contact",
+        "dest": "/contact.html"
+      },
+      {
+        "src": "/home",
+        "dest": "/home.html"
+      },
+      {
         "src": "/(.*)",
         "dest": "/$1.html"
       }
